# rover

./: Cargo.toml  LICENSE.md  README.md
control/: Cargo.toml
control/src/: lib.rs  wheels.rs
control/src/wheels/: callbacks.rs  commands.rs  speed.rs
control/tests/: callbacks.rs  wheels.rs
firmware/: Cargo.toml
firmware/src/: main.rs
